--- a/config/database.yml
+++ b/config/database.yml
@@ -27,6 +27,6 @@ production:
   encoding: utf8mb4
   charset: utf8mb4
   collation: utf8mb4_general_ci
-  host: database-1.cqlpkmxcii2c.ap-northeast-1.rds.amazonaws.com
+  host: rds-mysql-server.cqlpkmxcii2c.ap-northeast-1.rds.amazonaws.com
   username: root
   password: makennzooioi2014
