--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,6 @@
 /public/assets
 .byebug_history
 
+/config/database.yml
 # Ignore master key for decrypting credentials and more.
 /config/master.key
